# Embedded_Linux_2024

./: .gitignore  README.md
Ex_2/: README.md  asan_program  debug_program  main.c  main_preprocessed.c  optimized_program  random.c  random.h  random_generator
Ex_3/: main.c  makefile  makefile.compact
Ex_4/: CMakeLists.txt  logfile
Ex_6/: CMakeLists.txt
Ex_6/inc/: led.h
Ex_6/src/: led.c
